--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,11 +43,13 @@
     </script>
 
     <!-- Libs -->
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-messages.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.0/lodash.min.js"></script>
     <script type="text/javascript" src="app/assets/js/moment.js"></script>
+    <script type="text/javascript" src="app/assets/js/bootstrap.js"></script>
 
     <!-- App -->
     <script type="text/javascript" src="app/index.js"></script>
