--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="app/index.js"></script>
     <script type="text/javascript" src="app/services/BillsSvc.js"></script>
     <script type="text/javascript" src="app/services/TwitterSvc.js"></script>
+    <script type="text/javascript" src="app/services/VotesSvc.js"></script>
     <script type="text/javascript" src="app/index.route.js"></script>
     <script type="text/javascript" src="app/errors/errors.js"></script>
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
