--- a/src/public/index.html
+++ b/src/public/index.html
@@ -62,17 +62,9 @@
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
     <script type="text/javascript" src="app/bills/bills.controller.js"></script>
     <script type="text/javascript" src="app/assets/js/dirDisqus.js"></script>
+    <script type="text/javascript" src="app/assets/js/angular-disqus.js"></script>
     <script id="dsq-count-scr" src="//flvote.disqus.com/count.js" async></script>
 
-    <script>
-      // DISQUS.reset({
-      //   reload: true,
-      //   // config: function () {  
-      //   //   this.page.identifier = "newidentifier";  
-      //   //   this.page.url = "http://example.com/#!newthread";
-      //   // }
-      // });
-    </script>
 
   </body>
 
