fix: disqus comment counts

--- a/src/public/app/bills/bills.html
+++ b/src/public/app/bills/bills.html
@@ -134,7 +134,7 @@
                 <strong class="badge pull-right">{{bill.twitterVotes.no}}</strong>
             </a>
             <div class="clearfix"></div>
-            <p><a ui-sref="bills.detail({id: bill.billId})" data-disqus-identifier="{{bill.disqusId}}">0 Comments</a></p>
+            <p><a ui-sref="bills.detail({id: bill.billId})" class="disqus-comment-count" data-disqus-identifier="{{bill.disqusId}}">0 Comments</a></p>
             <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
