fix: header quick mobile optimization

--- a/src/public/app/bills/bills.html
+++ b/src/public/app/bills/bills.html
@@ -1,6 +1,6 @@
 <div style="background: url(../app/assets/img/fl-leg-blur-bg2.png) center center;
     background-size: cover;
-    background-repeat: no-repeat; padding:20px 0;">
+    background-repeat: no-repeat; padding: 150px 0 20px 0;">
     <div class="container">
         <!-- Register To Vote -->
         <div class="row">
