--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,8 +27,8 @@
     </p>
     <![endif]-->
 
-    <div ui-view="header" class=" affix affix-top" style="width: 100%;height: 120px;background: #fff;z-index: 1000; border-bottom:1px solid #ddd"></div>
-    <div ui-view="content" class="main-app-content" style="padding-top:120px;"></div>
+    <div ui-view="header" class=" affix affix-top" style="width: 100%; background: #fff;z-index: 1000; border-bottom:1px solid #ddd"></div>
+    <div ui-view="content" class="main-app-content"></div>
     <div ui-view="footer"></div>
 
     <script>
